[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["valeria-jefimova <108732968+valeria-jefimova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
